--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+playwright/
+test-results/
+playwright-report/
 
 # dependencies
 /node_modules
