--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.40",
+    "@langchain/openai": "^0.4.4",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
@@ -25,13 +28,19 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "http-streaming-request": "^2.2.0",
+    "langchain": "^0.3.19",
+    "langfuse-langchain": "^3.36.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "nuqs": "^2.4.0",
     "openai": "^4.85.3",
+    "partial-json": "^0.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
+    "react-markdown": "^10.1.0",
+    "rehype-sanitize": "^6.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
