--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-markdown": "^10.1.0",
     "rehype-sanitize": "^6.0.0",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
