--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.7",
     "http-streaming-request": "^2.2.0",
     "langchain": "^0.3.19",
+    "langfuse": "^3.37.0",
     "langfuse-langchain": "^3.36.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
