--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "format-quantity": "^3.0.0",
     "http-streaming-request": "^2.2.0",
     "langchain": "^0.3.19",
     "langfuse": "^3.37.0",
