--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "format-quantity": "^3.0.0",
+    "framer-motion": "^12.7.3",
     "http-streaming-request": "^2.2.0",
     "langchain": "^0.3.19",
     "langfuse": "^3.37.0",
