--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -317,3 +317,14 @@ entrypoint = "./functions/post-conversations-to-slack/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/post-conversations-to-slack/*.html" ]
+
+[functions.add-user-to-email-campaign]
+enabled = true
+verify_jwt = true
+import_map = "./functions/add-user-to-email-campaign/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/add-user-to-email-campaign/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/add-user-to-email-campaign/*.html" ]
