--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@sentry/nextjs": "^9.10.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
+    "boring-avatars": "^1.11.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
