--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "defuddle": "^0.6.4",
     "dotenv": "^16.4.7",
     "format-quantity": "^3.0.0",
     "framer-motion": "^12.7.3",
@@ -50,6 +51,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-markdown": "^10.1.0",
     "rehype-sanitize": "^6.0.0",
+    "schema-dts": "^1.1.5",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -60,6 +62,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
