--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.1.0",
     "@google/genai": "^1.0.0",
     "@langchain/core": "^0.3.40",
     "@langchain/openai": "^0.4.4",
