--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5"
   }
 }
