--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "langchain": "^0.3.19",
     "langfuse": "^3.37.0",
     "langfuse-langchain": "^3.36.0",
+    "lightningcss": "^1.28.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "nuqs": "^2.4.0",
