--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "22.x"
+    "node": "22.x",
+    "npm": "11.x"
   },
   "scripts": {
     "dev": "next dev",
@@ -20,6 +21,7 @@
     "@langchain/core": "^0.3.40",
     "@langchain/openai": "^0.4.4",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
