--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "format-quantity": "^3.0.0",
     "framer-motion": "^12.7.3",
     "http-streaming-request": "^2.2.0",
+    "jsdom": "^24.1.3",
     "langchain": "^0.3.19",
     "langfuse": "^3.37.0",
     "langfuse-langchain": "^3.36.0",
