--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "langfuse-langchain": "^3.36.0",
         "lightningcss": "^1.28.2",
         "lucide-react": "^0.475.0",
-        "next": "15.1.7",
+        "next": "^15.3.3",
         "nuqs": "^2.4.0",
         "openai": "^4.85.3",
         "partial-json": "^0.1.7",
