--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "use-debounce": "^10.0.4",
-        "uuid": "^11.1.0",
+        "uuid": "^9.0.1",
         "zod": "^3.24.1",
         "zustand": "^5.0.3"
     },
@@ -78,6 +78,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/uuid": "^9.0.8",
         "eslint": "9.28.0",
         "eslint-config-next": "15.3.3",
         "eslint-config-prettier": "^10.1.5",
