--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@langchain/core": "^0.3.40",
         "@langchain/openai": "^0.4.4",
         "@microsoft/fetch-event-source": "^2.0.1",
+        "@mozilla/readability": "^0.6.0",
         "@radix-ui/react-alert-dialog": "^1.1.14",
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-dialog": "^1.1.6",
@@ -34,6 +35,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.6",
+        "@sentry/nextjs": "^9.32.0",
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.48.1",
         "boring-avatars": "^1.11.2",
@@ -52,6 +54,7 @@
         "lightningcss": "^1.28.2",
         "lucide-react": "^0.475.0",
         "next": "^15.3.3",
+        "node-html-parser": "^7.0.1",
         "nuqs": "^2.4.0",
         "openai": "^4.85.3",
         "partial-json": "^0.1.7",
@@ -63,6 +66,7 @@
         "react-markdown": "^10.1.0",
         "rehype-sanitize": "^6.0.0",
         "schema-dts": "^1.1.5",
+        "sharp": "^0.34.2",
         "swr": "^2.3.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
@@ -75,10 +79,12 @@
         "@playwright/test": "^1.50.1",
         "@tailwindcss/postcss": "^4.1.7",
         "@types/jsdom": "^21.1.7",
+        "@types/mozilla-readability": "^0.2.1",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "@types/uuid": "^9.0.8",
+        "chrome-aws-lambda": "^10.1.0",
         "eslint": "9.28.0",
         "eslint-config-next": "15.3.3",
         "eslint-config-prettier": "^10.1.5",
@@ -87,6 +93,7 @@
         "postcss": "^8",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.12",
+        "puppeteer-core": "^10.4.0",
         "tailwindcss": "^4.1.7",
         "typescript": "^5"
     }
