--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-progress": "^1.1.7",
         "@radix-ui/react-radio-group": "^1.2.3",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
@@ -47,6 +48,7 @@
         "format-quantity": "^3.0.0",
         "framer-motion": "^12.19.2",
         "http-streaming-request": "^2.2.0",
+        "js-cookie": "^3.0.5",
         "jsdom": "^24.1.3",
         "langchain": "^0.3.19",
         "langfuse": "^3.37.0",
@@ -78,6 +80,7 @@
     "devDependencies": {
         "@playwright/test": "^1.50.1",
         "@tailwindcss/postcss": "^4.1.7",
+        "@types/js-cookie": "^3.0.6",
         "@types/jsdom": "^21.1.7",
         "@types/mozilla-readability": "^0.2.1",
         "@types/node": "^20.19.8",
