--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "build": "next build",
         "start": "next start -p $PORT",
         "lint": "next lint --fix",
+        "test": "vitest run",
+        "test:watch": "vitest --watch",
         "test:e2e": "playwright test",
         "test:e2e:ui": "playwright test --ui",
         "test:e2e:debug": "playwright test --debug",
@@ -43,13 +45,11 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
-        "defuddle": "^0.6.4",
         "dotenv": "^16.4.7",
         "format-quantity": "^3.0.0",
         "framer-motion": "^12.19.2",
         "http-streaming-request": "^2.2.0",
         "js-cookie": "^3.0.5",
-        "jsdom": "^24.1.3",
         "langchain": "^0.3.19",
         "langfuse": "^3.37.0",
         "langfuse-langchain": "^3.36.0",
@@ -80,6 +80,9 @@
     "devDependencies": {
         "@playwright/test": "^1.50.1",
         "@tailwindcss/postcss": "^4.1.7",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/js-cookie": "^3.0.6",
         "@types/jsdom": "^21.1.7",
         "@types/mozilla-readability": "^0.2.1",
@@ -87,17 +90,21 @@
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "@types/uuid": "^9.0.8",
+        "@vitejs/plugin-react": "^4.7.0",
+        "@vitest/ui": "^3.2.4",
         "chrome-aws-lambda": "^10.1.0",
         "eslint": "9.28.0",
         "eslint-config-next": "15.3.3",
         "eslint-config-prettier": "^10.1.5",
         "husky": "^9.1.7",
+        "jsdom": "^26.1.0",
         "lint-staged": "^16.1.0",
         "postcss": "^8",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.12",
         "puppeteer-core": "^10.4.0",
         "tailwindcss": "^4.1.7",
-        "typescript": "^5"
+        "typescript": "^5",
+        "vitest": "^3.2.4"
     }
 }
