Update cursor rules and add showcase of it's new preferences (#55)
* Update cursor rules and add showcase of it's new preferences

* Typo

---------

Co-authored-by: Aron Hammond <aron.hammond@persgroep.net>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,6 @@
                 "caughtErrorsIgnorePattern": "^_"
             }
         ]
-    }
+    },
+    "ignorePatterns": ["src/tests/**/*"]
 }
