--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@sentry/nextjs": "^9.32.0",
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.48.1",
+        "autoprefixer": "^10.4.21",
         "boring-avatars": "^1.11.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -49,6 +50,7 @@
         "format-quantity": "^3.0.0",
         "framer-motion": "^12.19.2",
         "http-streaming-request": "^2.2.0",
+        "javascript-time-ago": "^2.5.11",
         "js-cookie": "^3.0.5",
         "langchain": "^0.3.19",
         "langfuse": "^3.37.0",
@@ -69,7 +71,7 @@
         "rehype-sanitize": "^6.0.0",
         "schema-dts": "^1.1.5",
         "sharp": "^0.34.2",
-        "swr": "^2.3.3",
+        "swr": "^2.3.4",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "use-debounce": "^10.0.4",
@@ -79,7 +81,7 @@
     },
     "devDependencies": {
         "@playwright/test": "^1.50.1",
-        "@tailwindcss/postcss": "^4.1.7",
+        "@tailwindcss/postcss": "^4.1.11",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
@@ -99,7 +101,7 @@
         "husky": "^9.1.7",
         "jsdom": "^26.1.0",
         "lint-staged": "^16.1.0",
-        "postcss": "^8",
+        "postcss": "^8.5.6",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.12",
         "puppeteer-core": "^10.4.0",
