Refactor comment data handling (#69)
* Use service guidelines for comments

* Fix test

* Add test, remove console log

* Add toast for recipe deletion

---------

Co-authored-by: Aron Hammond <aron.hammond@persgroep.net>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,5 @@
             }
         ]
     },
-    "ignorePatterns": ["**/*.test.tsx"]
+    "ignorePatterns": ["**/*.test.tsx", "**/*.test.ts"]
 }
