--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -113,6 +113,12 @@ file_size_limit = "50MiB"
 allowed_mime_types = ["image/png", "image/jpeg"]
 objects_path = "./chat-images"
 
+[storage.buckets.email-assets]
+public = true
+file_size_limit = "10MiB"
+allowed_mime_types = ["image/png", "image/jpeg", "image/svg+xml"]
+objects_path = "./email-assets"
+
 [auth]
 enabled = true
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
