--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,14 @@
         ],
         "types": ["vitest/globals"]
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "notification-job/notification-worker.ts",
+        "notification-job/email-service.ts",
+        "notification-job/notify.ts"
+    ],
     "exclude": ["node_modules", "supabase"]
 }
