BC257 feat: Complete recipe edit page refresh with modern UI and enhanced f… (#76)
* feat: Complete recipe edit page refresh with modern UI and enhanced functionality

BREAKING CHANGES:
- Replaced old RecipeForm with new modular component architecture
- Updated API endpoints for recipe operations
- Changed ingredient data structure to support groups

NEW FEATURES:
- Modern sticky header with save/back navigation
- Drag & drop functionality for ingredients and steps using @dnd-kit
- Real-time validation with immediate user feedback
- Camera integration for photo capture on edit page
- AI image generation with proper API integration
- Recipe visibility modal (public/private) with Draft->Published flow
- Navigation warning dialog for unsaved changes
- Mobile-optimized touch interactions

UI/UX IMPROVEMENTS:
- Sticky header with save/back buttons
- Inline editable title with double-click to edit
- Auto-resizing textarea for descriptions
- Cooking time input with numeric validation
- Servings counter with +/- buttons
- Source field for recipe attribution
- Validation error list with real-time feedback
- Responsive design with mobile-first approach

TECHNICAL IMPROVEMENTS:
- Modular component architecture with clear separation
- Custom hooks for state management (useRecipeEdit, useUnsavedChanges)
- TypeScript strict typing throughout
- Performance optimizations with debouncing and memoization
- Comprehensive test coverage for all new components
- Linter compliance with zero errors
- Production-ready build optimization

COMPONENTS ADDED:
- EditRecipeHeader: Sticky header with navigation
- NewRecipeEditForm: Main form orchestrator
- RecipeInformationSection: Image, title, cooking time, servings, description
- IngredientGroupManager: Drag & drop ingredient groups
- IngredientItem: Individual ingredient with inline editing
- PreparationSteps: Drag & drop preparation steps
- CameraModal: Photo capture functionality
- RecipeVisibilityModal: Public/private selection
- Navigation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "notify:dev": "NODE_ENV=development tsx notification-job/notify.ts"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@google-cloud/vision": "^5.1.0",
         "@google/genai": "^1.0.0",
         "@langchain/core": "^0.3.40",
