Improve image uploads (#87)
* fix: Fixed gallery upload in recipe editor

* reduce bandwith of image components

* Remove sizes

* Keep aspect ratio

* Fix z-index for recipe card

---------

Co-authored-by: Aron Hammond <aron.hammond@persgroep.net>

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -89,6 +89,8 @@ port = 54324
 enabled = true
 # The maximum file size allowed (e.g. "5MB", "500KB").
 file_size_limit = "50MiB"
+image_transformation = { enabled = true }
+
 
 # Image transformation API is available to Supabase Pro plan.
 # [storage.image_transformation]
