--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.6",
         "@sentry/nextjs": "^9.32.0",
+        "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.48.1",
         "@types/nodemailer": "^6.4.17",
