--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "react-dom": "^19.0.0",
         "react-intersection-observer": "^9.16.0",
         "react-markdown": "^10.1.0",
+        "react-webcam": "^7.2.0",
         "rehype-sanitize": "^6.0.0",
         "schema-dts": "^1.1.5",
         "sharp": "^0.34.2",
