feat: Integrate OpenAI TranscriptionService for Dishcovery audio transcription
- Add TranscriptionService using OpenAI Whisper API
- Create dedicated audio-files bucket in Supabase storage
- Update Dishcovery flow to upload audio to storage instead of base64
- Implement background transcription in recipe import job
- Add InProgressRecipeCard support for dishcovery with HandPlatter icon
- Update both grid and list views for pending dishcovery recipes
- Remove transcription display from client-side (moved to background)

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -121,6 +121,12 @@ file_size_limit = "10MiB"
 allowed_mime_types = ["image/png", "image/jpeg", "image/svg+xml", "image/gif"]
 objects_path = "./email-assets"
 
+[storage.buckets.audio-files]
+public = true
+file_size_limit = "50MiB"
+allowed_mime_types = ["audio/mpeg", "audio/mp3", "audio/wav", "audio/webm", "audio/ogg", "audio/m4a"]
+objects_path = "./audio-files"
+
 [auth]
 enabled = true
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
