Ignore prebuild artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
+android
+ios
 
 # Metro
 .metro-health-check*
@@ -35,5 +37,3 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
-
-app-example
