--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bonchef-native",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -25,6 +25,7 @@
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
+    "expo-share-extension": "^4.0.1",
     "expo-share-intent": "^4.1.1",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
