--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -100,7 +100,7 @@ image_transformation = { enabled = true }
 [storage.buckets.recipe-images]
 public = true
 file_size_limit = "50MiB"
-allowed_mime_types = ["image/png", "image/jpeg"]
+allowed_mime_types = ["image/png", "image/jpeg", "image/webp", "image/avif"]
 objects_path = "./recipe-images"
 
 [storage.buckets.profile_avatars]
