Fix linter errors and improve voice recording functionality
- Remove unused variables in recipe-imports.ts, dishcovery-camera.tsx, voice-input.tsx, top-bar.tsx
- Fix TypeScript errors in photo-import-view.tsx (uploadImageToSignedUrl and startRecipeImportJob)
- Fix React unescaped entities error
- Refactor VoiceInput component to use props instead of own hook instance
- Fix voice recording state management between components
- Set Whisper API to auto-detect language (supports Dutch and English)
- All builds now pass successfully

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -121,6 +121,12 @@ file_size_limit = "10MiB"
 allowed_mime_types = ["image/png", "image/jpeg", "image/svg+xml", "image/gif"]
 objects_path = "./email-assets"
 
+[storage.buckets.dishcovery-assets]
+public = true
+file_size_limit = "50MiB"
+allowed_mime_types = ["image/png", "image/jpeg", "image/webp", "image/avif", "audio/mpeg", "audio/webm"]
+objects_path = "./dishcovery-assets"
+
 [storage.buckets.audio-files]
 public = true
 file_size_limit = "50MiB"
