--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -33,5 +33,5 @@
         "notification-job/email-service.ts",
         "notification-job/notify.ts"
     ],
-    "exclude": ["node_modules", "supabase"]
+    "exclude": ["node_modules"]
 }
