--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -4,15 +4,14 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "expo start",
-    "start": "expo start",
-    "android": "expo start --android",
+    "android-simulator": "expo run:android",
+    "ios-simulator": "expo run:ios",
     "build": "expo prebuild --no-install",
-    "ios": "expo start --ios",
     "web": "expo start --web",
-    "run-android": "expo run:android",
-    "run-ios": "expo run:ios",
     "lint": "expo lint",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
