--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.6",
+        "@radix-ui/react-visually-hidden": "^1.2.3",
         "@sentry/nextjs": "^9.32.0",
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/ssr": "^0.5.2",
@@ -101,7 +102,7 @@
         "@types/js-cookie": "^3.0.6",
         "@types/jsdom": "^21.1.7",
         "@types/mozilla-readability": "^0.2.1",
-        "@types/node": "^20.19.8",
+        "@types/node": "^20.19.13",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "@types/uuid": "^9.0.8",
