--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -52,10 +52,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "19.1.12",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
