--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -103,8 +103,8 @@
         "@types/jsdom": "^21.1.7",
         "@types/mozilla-readability": "^0.2.1",
         "@types/node": "^20.19.13",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/react": "19.1.12",
+        "@types/react-dom": "19.1.9",
         "@types/uuid": "^9.0.8",
         "@vitejs/plugin-react": "^4.7.0",
         "@vitest/ui": "^3.2.4",
@@ -119,7 +119,7 @@
         "prettier-plugin-tailwindcss": "^0.6.12",
         "puppeteer-core": "^10.4.0",
         "tailwindcss": "^4.1.7",
-        "typescript": "^5",
+        "typescript": "^5.9.2",
         "vitest": "^3.2.4"
-    }
+    }   
 }
