BC-14 feat: implement Dishcovery feature for recipe generation from photos (#92)

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -100,7 +100,7 @@ image_transformation = { enabled = true }
 [storage.buckets.recipe-images]
 public = true
 file_size_limit = "50MiB"
-allowed_mime_types = ["image/png", "image/jpeg"]
+allowed_mime_types = ["image/png", "image/jpeg", "image/webp", "image/avif"]
 objects_path = "./recipe-images"
 
 [storage.buckets.profile_avatars]
@@ -120,6 +120,12 @@ public = true
 file_size_limit = "10MiB"
 allowed_mime_types = ["image/png", "image/jpeg", "image/svg+xml", "image/gif"]
 objects_path = "./email-assets"
+
+[storage.buckets.dishcovery-assets]
+public = true
+file_size_limit = "50MiB"
+allowed_mime_types = ["image/png", "image/jpeg", "image/webp", "image/avif", "audio/mpeg", "audio/webm"]
+objects_path = "./dishcovery-assets"
 
 [storage.buckets.video-summaries]
 public = true
