--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
         "node-html-parser": "^7.0.1",
         "nodemailer": "^7.0.5",
         "nuqs": "^2.4.0",
-        "openai": "^4.85.3",
+        "openai": "^4.104.0",
         "partial-json": "^0.1.7",
         "posthog-js": "^1.236.2",
         "posthog-node": "^4.12.0",
@@ -79,6 +79,7 @@
         "react-dom": "^19.0.0",
         "react-intersection-observer": "^9.16.0",
         "react-markdown": "^10.1.0",
+        "react-webcam": "^7.2.0",
         "rehype-sanitize": "^6.0.0",
         "schema-dts": "^1.1.5",
         "sharp": "^0.34.2",
