--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
         "notify:dev": "NODE_ENV=development tsx notification-job/notify.ts"
     },
     "dependencies": {
+        "@repo/lib": "workspace:*",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
@@ -48,7 +49,7 @@
         "@sentry/nextjs": "^9.32.0",
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/ssr": "^0.5.2",
-        "@supabase/supabase-js": "^2.48.1",
+        "@supabase/supabase-js": "^2.57.4",
         "@types/nodemailer": "^6.4.17",
         "apify-client": "^2.15.0",
         "autoprefixer": "^10.4.21",
