--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -6,7 +6,7 @@
     "dev": "expo start",
     "android-simulator": "expo run:android",
     "ios-simulator": "expo run:ios",
-    "build": "expo prebuild --no-install",
+    "build": "expo prebuild",
     "web": "expo start --web",
     "lint": "expo lint",
     "android": "expo run:android",
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@repo/lib": "workspace:*",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@repo/lib": "workspace:*",
     "@supabase/supabase-js": "^2.57.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -36,7 +38,6 @@
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
-    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
@@ -44,19 +45,22 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-mmkv": "^3.3.0",
     "react-native-nitro-modules": "^0.29.2",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "19.1.12",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "private": true
