--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "@repo/lib": "workspace:*",
     "@supabase/supabase-js": "^2.57.4",
+    "@tanstack/react-query": "^5.87.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.22",
@@ -48,6 +49,7 @@
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.13.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
