BC-311-feat: implement Instagram repost automation with Langfuse integration (#98)
- Add Instagram repost queue database schema and types
- Implement complete Instagram repost job with Meta Business Suite API
- Integrate Langfuse for AI caption generation with custom prompt
- Add email notifications via Zoho Mail for error handling
- Support dry-run mode for testing without actual posting

---------

Co-authored-by: Aron Hammond <aron.hammond@persgroep.net>

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "format:check": "prettier --check .",
         "prepare": "husky",
         "notify": "tsx notification-job/notify.ts",
-        "notify:dev": "NODE_ENV=development tsx notification-job/notify.ts"
+        "notify:dev": "NODE_ENV=development tsx notification-job/notify.ts",
+        "post-to-instagram": "tsx instagram-repost-job/index.ts",
+        "post-to-instagram:dry-run": "tsx instagram-repost-job/index.ts --dry-run"
     },
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
