--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -6,13 +6,20 @@
     "main": "index.ts",
     "types": "index.ts",
     "exports": {
-        "./services/auth": "./src/services/auth.ts"
+        "./services/auth": "./src/services/auth.ts",
+        "./hooks/use-public-recipes": "./src/hooks/use-public-recipes.ts"
     },
     "peerDependencies": {
-        "@supabase/supabase-js": "^2.57.4"
+        "@supabase/supabase-js": "^2.57.4",
+        "react": "^19.0.0"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
+        "@types/node": "^20.19.13",
+        "@types/react": "19.1.12",
         "turbo": "^2.5.6"
+    },
+    "dependencies": {
+        "@tanstack/react-query": "^5.87.4"
     }
 }
