--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -7,8 +7,10 @@
     "types": "index.ts",
     "exports": {
         "./services/auth": "./src/services/auth.ts",
+        "./services/recipe-import-jobs": "./src/services/recipe-import-jobs.ts",
         "./hooks/use-public-recipes": "./src/hooks/use-public-recipes.ts",
-        "./hooks/use-recipe": "./src/hooks/use-recipe.ts"
+        "./hooks/use-recipe": "./src/hooks/use-recipe.ts",
+        "./hooks/use-recipe-import": "./src/hooks/use-recipe-import.ts"
     },
     "peerDependencies": {
         "@supabase/supabase-js": "^2.57.4",
@@ -21,6 +23,7 @@
         "turbo": "^2.5.6"
     },
     "dependencies": {
-        "@tanstack/react-query": "^5.87.4"
+        "@tanstack/react-query": "^5.87.4",
+        "zod": "^3.22.4"
     }
 }
