--- a/apps/native/eas.json
+++ b/apps/native/eas.json
@@ -7,7 +7,8 @@
       },
       "preview": {
         "ios": {
-            "simulator": false
+            "simulator": false,
+            "distribution": "internal"
         }
       }
     }
