--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@types/react": "19.0.14",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
