--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,7 +24,6 @@
         "notify:dev": "NODE_ENV=development tsx notification-job/notify.ts"
     },
     "dependencies": {
-        "@repo/lib": "workspace:*",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
@@ -46,11 +45,14 @@
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.6",
         "@radix-ui/react-visually-hidden": "^1.2.3",
+        "@repo/lib": "workspace:*",
         "@sentry/nextjs": "^9.32.0",
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/ssr": "^0.5.2",
         "@supabase/supabase-js": "^2.57.4",
         "@types/nodemailer": "^6.4.17",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
         "apify-client": "^2.15.0",
         "autoprefixer": "^10.4.21",
         "boring-avatars": "^1.11.2",
@@ -104,8 +106,6 @@
         "@types/jsdom": "^21.1.7",
         "@types/mozilla-readability": "^0.2.1",
         "@types/node": "^20.19.13",
-        "@types/react": "19.1.12",
-        "@types/react-dom": "19.1.9",
         "@types/uuid": "^9.0.8",
         "@vitejs/plugin-react": "^4.7.0",
         "@vitest/ui": "^3.2.4",
@@ -122,5 +122,5 @@
         "tailwindcss": "^4.1.7",
         "typescript": "^5.9.2",
         "vitest": "^3.2.4"
-    }   
+    }
 }
