--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Bonchef",
-    "slug": "bonchef",
+    "slug": "bonchef-native",
     "version": "1.0.0",
     "owner": "bonchef",
     "orientation": "portrait",
@@ -49,7 +49,24 @@
       [
         "expo-share-extension",
         {
-          "height": 500
+          "height": 500,
+          "activationRules": [
+            {
+              "type": "url",
+              "max": 1
+            }
+          ],
+          "backgroundColor": {
+            "red": 255,
+            "green": 255,
+            "blue": 255,
+            "alpha": 0.0
+          },
+          "excludedPackages": [
+            "expo-dev-client",
+            "expo-splash-screen",
+            "expo-updates"
+          ]
         }
       ],
       [
