--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -61,6 +61,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-react-jsx": "^7.27.1",
+    "@types/node": "^20.19.13",
+    "@types/react": "^19.1.13",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
