--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -5,6 +5,10 @@
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.ts",
+    "scripts": {
+        "test": "vitest run",
+        "test:watch": "vitest --watch"
+    },
     "exports": {
         "./services/auth": "./src/services/auth.ts",
         "./services/recipe-import-jobs": "./src/services/recipe-import-jobs.ts",
@@ -13,7 +17,8 @@
         "./hooks/use-recipe": "./src/hooks/use-recipe.ts",
         "./hooks/use-recipe-import": "./src/hooks/use-recipe-import.ts",
         "./hooks/use-own-recipes": "./src/hooks/use-own-recipes.ts",
-        "./hooks/use-bookmarked-recipes": "./src/hooks/use-bookmarked-recipes.ts"
+        "./hooks/use-bookmarked-recipes": "./src/hooks/use-bookmarked-recipes.ts",
+        "./utils/ingredient-formatting": "./src/utils/ingredient-formatting.ts"
     },
     "peerDependencies": {
         "@supabase/supabase-js": "^2.57.4",
@@ -22,7 +27,8 @@
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^20.19.13",
-        "turbo": "^2.5.6"
+        "turbo": "^2.5.6",
+        "vitest": "^3.2.4"
     },
     "dependencies": {
         "@tanstack/react-query": "^5.87.4",
