--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -22,7 +22,9 @@
     },
     "peerDependencies": {
         "@supabase/supabase-js": "^2.57.4",
-        "react": "^19.0.0"
+        "react": "^19.0.0",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
