--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.87.4",
     "babel-preset-expo": "^54.0.1",
+    "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.22",
