--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -51,6 +51,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-keyboard-controller": "^1.19.0",
     "react-native-mmkv": "^3.3.0",
     "react-native-nitro-modules": "^0.29.2",
     "react-native-reanimated": "~3.17.5",
