--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -77,6 +77,7 @@
             "./assets/fonts/Montserrat-Medium.ttf",
             "./assets/fonts/Montserrat-SemiBold.ttf",
             "./assets/fonts/Montserrat-Bold.ttf",
+            "./assets/fonts/Montserrat-Light.ttf",
             "./assets/fonts/Lora-Regular.ttf",
             "./assets/fonts/Lora-Medium.ttf",
             "./assets/fonts/Lora-SemiBold.ttf",
