--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -37,7 +37,7 @@
           "image": "./assets/icons/iphone-light.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#385940"
+          "backgroundColor": "#ffffff"
         }
       ],
       [
