--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -60,7 +60,7 @@
             "red": 255,
             "green": 255,
             "blue": 255,
-            "alpha": 0.0
+            "alpha": 0
           },
           "excludedPackages": [
             "expo-dev-client",
@@ -97,6 +97,14 @@
         "expo-web-browser",
         {
           "experimentalLauncherActivity": false
+        }
+      ],
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "bonchef-native",
+          "organization": "bonchef-digital-kitchen"
         }
       ]
     ],
