--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@repo/lib": "workspace:*",
+    "@sentry/react-native": "^7.4.0",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.87.4",
     "babel-preset-expo": "^54.0.1",
